# Build 5.8.3 Release ??/??/2014
   1. New GENERATEable themes in /resources/randreas/example.xml: forest, jungle, desert, swamp, mountains, snow, plains
   2. Generic Character Classes now support starting money values. (Standard support requires code).
   3. Socials action cost can now be controlled and tweeked from ini file/control panel.
   4. MiniWebServer renamed to CoffeeWebServer -- so many path/name changes! Also upgraded to 2.2.
   5. Clan Position-based effects/abilities implemented. Standard Powers also still apply.
   6. Random Generator now supports post-processing tags in XML, MERGE parameters and NODETYPE_[dir] tags. See example.xml re-organization.
   7. Portals can now be entered using the CLIMB skill, and their put, mount, and dismount strings are modifiable.
   8. New Property: Prop_Climbable - use for making rooms, exits, or portals require climbing (and benefit from ropes and ladders).
   9. New Guide in guides/randomareas.html.  Also, random races are easier to build now.
  10. New Assassin skill: Scratch, for doing very very little damage without entering combat.
  11. Emoter behavior's "inroom" parameter changed to comma delimited -- it just wasn't working the other way. 
  12. Scriptable GET_PROG is now functional on container items, as it will match the item being retreived, not the container.
  13. Default XP chart (lists.ini) modified to make low levels faster, and level off around 5k per level.
  14. WanderHomeLater property expanded into more usefulness -- about 8 new parameters added.
  15. FireBuilding now gained by all classes at level 1
  16. QUESTS command, used by an admin, can target other players to get info about them.  See AHELP QUESTS for more info on this.
  17. New property Prop_Uncampable -- prevents a mob or room from respawning if non-admin players are present.
  18. VIEW will now notify users if the armor they are interested in is too large or too small for them to wear.
# Build 5.8.2 Release 6/13/2014