@@ -52,7 +52,7 @@ CMHITP integer NULL,
 CMLEVL varchar (50) NULL,
 CMMANA integer NULL,
 CMMOVE integer NULL,
-CMDESC varchar (255) NULL,
+CMDESC memo NULL,
 CMALIG integer NULL,
 CMEXPE integer NULL,
 CMEXLV integer NULL,
