@@ -47,7 +47,7 @@ CMHITP integer,
 CMLEVL varchar (50),
 CMMANA integer,
 CMMOVE integer,
-CMDESC varchar (255),
+CMDESC CLOB,
 CMALIG integer,
 CMEXPE integer,
 CMEXLV integer,
