@@ -51,7 +51,7 @@ CMHITP integer NULL,
 CMLEVL varchar (50) NULL,
 CMMANA integer NULL,
 CMMOVE integer NULL,
-CMDESC varchar (255) NULL,
+CMDESC LONGVARCHAR NULL,
 CMALIG integer NULL,
 CMEXPE integer NULL,
 CMEXLV integer NULL,
