@@ -52,7 +52,7 @@ CMHITP integer NULL,
 CMLEVL nvarchar (50) NULL,
 CMMANA integer NULL,
 CMMOVE integer NULL,
-CMDESC nvarchar (255) NULL,
+CMDESC ntext NULL,
 CMALIG integer NULL,
 CMEXPE integer NULL,
 CMEXLV integer NULL,
