@@ -79,7 +79,7 @@ CREATE TABLE CMCHAR (
 	CMLEVL varchar (50) NULL ,
 	CMMANA int NULL ,
 	CMMOVE int NULL ,
-	CMDESC varchar (255) NULL ,
+	CMDESC longtext NULL ,
 	CMALIG int NULL ,
 	CMEXPE int NULL ,
 	CMEXLV int NULL ,
