@@ -71,7 +71,7 @@ CREATE TABLE CMCHAR (
 	CMLEVL char (50) NULL ,
 	CMMANA int NULL ,
 	CMMOVE int NULL ,
-	CMDESC char (255) NULL ,
+	CMDESC CLOB NULL ,
 	CMALIG int NULL ,
 	CMEXPE int NULL ,
 	CMEXLV int NULL ,
